[gd_scene load_steps=3 format=2]

[ext_resource path="res://Code/SceneScripts/Features/Feature_DisplayProperties.gd" type="Script" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=3]

[node name="Feature_DisplayProperties" type="Spatial"]
script = ExtResource( 1 )

[node name="OQ_UI2DCanvas_DisplayProperties" parent="." instance=ExtResource( 3 )]

[node name="ReferenceRect" type="ReferenceRect" parent="OQ_UI2DCanvas_DisplayProperties"]
margin_right = 300.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="OQ_UI2DCanvas_DisplayProperties/ReferenceRect"]
margin_right = 40.0
margin_bottom = 14.0
text = "What do you want to see?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EdgesButton" type="CheckButton" parent="OQ_UI2DCanvas_DisplayProperties/ReferenceRect"]
margin_top = 16.0
margin_right = 76.0
margin_bottom = 56.0
text = "Edges"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NormalsButton" type="CheckButton" parent="OQ_UI2DCanvas_DisplayProperties/ReferenceRect"]
margin_top = 47.0
margin_right = 117.0
margin_bottom = 87.0
text = "Normals "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="OQ_UI2DCanvas_DisplayProperties/ReferenceRect/EdgesButton" to="." method="_on_EdgesButton_toggled"]
[connection signal="toggled" from="OQ_UI2DCanvas_DisplayProperties/ReferenceRect/NormalsButton" to="." method="_on_NormalsButton_toggled"]
